[gd_scene load_steps=3 format=3 uid="uid://fcw8im231rar"]

[ext_resource type="Texture2D" uid="uid://d14n1yg6uoqc5" path="res://assets/toyo.png" id="1_to6cs"]
[ext_resource type="Script" path="res://toyo.gd" id="2_b8bv8"]

[node name="Toyo" type="TextureRect"]
offset_left = -897.0
offset_top = 225.0
offset_right = 1407.0
offset_bottom = 3833.0
scale = Vector2(0.557832, 0.992878)
texture = ExtResource("1_to6cs")
script = ExtResource("2_b8bv8")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1009.26, 230.643, 980.582, 281.001, 1012.85, 384.74, 1152.68, 487.472, 1299.67, 514.665, 1423.37, 501.572, 1570.37, 435.099, 1875.12, 393.805, 2235.44, 367.618, 2197.79, 31.2224, 1683.3, 44.3156, 1450.26, 69.4949, 1251.27, 122.875, 1120.41, 171.219, 1120.41, 171.219)

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(916.046, 288.051, 939.351, 376.683, 1025.4, 450.206, 1127.58, 507.615, 1226.18, 526.752, 1364.21, 528.766, 1267.41, 604.304, 1193.91, 689.914, 1159.85, 760.416, 1116.82, 795.667, 1005.68, 829.911, 890.949, 843.004, 785.183, 835.954, 695.55, 799.695, 609.503, 730.2, 587.991, 693.942, 625.636, 565.024, 706.306, 448.192, 804.902, 363.589)

[node name="Polygon2D3" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(580.82, 777.538, 670.453, 823.867, 797.731, 864.154, 959.07, 862.14, 1073.8, 827.896, 1147.3, 809.767, 1192.12, 917.535, 1274.58, 1025.3, 1281.75, 1093.79, 1265.61, 1163.28, 1222.59, 1213.64, 1143.71, 1243.86, 1018.23, 1240.84, 910.668, 1222.71, 797.731, 1177.39, 769.049, 1160.26, 654.319, 996.094, 596.954, 858.111)

[node name="Polygon2D4" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1337.32, 1110.91, 1514.79, 1296.23, 1674.34, 1449.32, 1663.58, 1500.69, 1608.01, 1549.03, 1529.13, 1580.25, 1423.37, 1608.46, 1328.36, 1608.46, 1226.18, 1590.33, 1161.64, 1564.14, 1068.42, 1482.56, 910.668, 1317.38, 840.755, 1234.79, 889.157, 1257.96, 1025.4, 1273.07, 1136.54, 1266.02, 1249.48, 1228.75, 1297.88, 1184.44)

[node name="Polygon2D5" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1710.19, 1507.74, 1839.26, 1656.8, 1918.14, 1779.67, 1948.62, 1838.09, 1910.97, 1902.55, 1867.95, 1944.85, 1810.58, 1970.03, 1751.42, 1990.17, 1679.72, 1993.2, 1631.32, 1997.22, 1548.85, 1972.04, 1475.35, 1936.79, 1455.64, 1916.65, 1416.2, 1836.08, 1353.45, 1760.54, 1270.99, 1663.85, 1217.21, 1611.48, 1324.77, 1627.59, 1430.54, 1620.54, 1552.44, 1587.3, 1634.9, 1557.09, 1667.17, 1534.93)

[node name="Polygon2D6" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1477.15, 1979.1, 1548.85, 2009.31, 1651.03, 2015.35, 1744.25, 2008.3, 1846.43, 1983.12, 1916.35, 1956.94, 1966.54, 1920.68, 1997.02, 2080.82, 2007.77, 2174.49, 2004.19, 2277.22, 1964.75, 2325.56, 1916.35, 2364.84, 1846.43, 2384.99, 1771.14, 2393.04, 1706.61, 2393.04, 1651.03, 2381.96, 1591.88, 2356.78, 1525.55, 2317.51, 1471.77, 2257.07, 1491.49, 2179.52, 1484.32, 2064.7, 1464.6, 2003.27)

[node name="Polygon2D7" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1966.54, 2374.91, 1826.71, 2691.17, 1735.29, 2841.24, 1676.13, 2864.4, 1606.22, 2871.45, 1545.27, 2865.41, 1443.09, 2836.2, 1357.04, 2789.87, 1274.58, 2716.35, 1254.86, 2690.16, 1297.88, 2635.77, 1387.51, 2527, 1432.33, 2444.41, 1468.18, 2325.56, 1532.72, 2368.87, 1627.73, 2408.15, 1720.95, 2417.22, 1796.24, 2412.18, 1889.46, 2395.06)

[node name="Polygon2D8" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(1220.8, 2727.42, 1305.05, 2806.99, 1435.92, 2878.5, 1564.99, 2899.65, 1692.27, 2883.54, 1631.32, 2993.32, 1509.42, 3126.27, 1396.48, 3249.14, 1276.37, 3359.93, 1220.8, 3366.98, 1129.37, 3365.97, 1018.23, 3321.66, 919.632, 3260.22, 865.852, 3186.7, 846.133, 3127.27, 925.01, 3046.7, 1014.64, 2978.21, 1057.67, 2924.83, 1120.41, 2843.25)

[node name="Polygon2D9" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(785.183, 3162.52, 831.792, 3253.17, 928.595, 3337.77, 1016.44, 3376.04, 1120.41, 3396.19, 1238.72, 3396.19, 1068.42, 3566.4, 770.841, 3565.39, 406.932, 3581.51, 57.365, 3583.52, 301.166, 3458.63, 484.017, 3353.89, 654.319, 3251.15)
